--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -14,7 +14,7 @@
         <groupId>org.executequery</groupId>
         <artifactId>RedExpert-parent</artifactId>
         <relativePath>../../pom.xml</relativePath>
-        <version>2020.8</version>
+        <version>2020.08-SNAPSHOT</version>
     </parent>
 
     <dependencies>
