--- a/modules/plugins/fbplugin-impl/pom.xml
+++ b/modules/plugins/fbplugin-impl/pom.xml
@@ -38,12 +38,12 @@
     <dependency>
       <groupId>ru.red-soft.jdbc</groupId>
       <artifactId>jaybird-jdk18</artifactId>
-      <version>3.0.10</version>
+      <version>3.0.15</version>
     </dependency>
     <dependency>
       <groupId>ru.red-soft.jdbc</groupId>
       <artifactId>jaybird-cryptoapi-jdk18</artifactId>
-      <version>3.0.10</version>
+      <version>3.0.15</version>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
@@ -102,6 +102,13 @@
                   <outputDirectory>../../../lib</outputDirectory>
                   <destFileName>jaybird-cryptoapi.jar</destFileName>
                 </artifactItem>
+                <artifactItem>
+                  <groupId>ru.red-soft.jdbc</groupId>
+                  <artifactId>fbclient</artifactId>
+                  <type>jar</type>
+                  <outputDirectory>../../../lib</outputDirectory>
+                  <destFileName>fbclient.jar</destFileName>
+                </artifactItem>
               </artifactItems>
             </configuration>
           </execution>
@@ -125,6 +132,13 @@
                   <type>jar</type>
                   <outputDirectory>../../redexpert/target/lib</outputDirectory>
                   <destFileName>jaybird-cryptoapi.jar</destFileName>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>ru.red-soft.jdbc</groupId>
+                  <artifactId>fbclient</artifactId>
+                  <type>jar</type>
+                  <outputDirectory>../../../lib</outputDirectory>
+                  <destFileName>fbclient.jar</destFileName>
                 </artifactItem>
               </artifactItems>
             </configuration>
