--- a/modules/plugins/fbplugin-impl/pom.xml
+++ b/modules/plugins/fbplugin-impl/pom.xml
@@ -19,12 +19,8 @@
       <url>http://repo1.maven.org/maven2</url>
     </repository>
     <repository>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <id>bintray-red-soft-ru-releases</id>
-      <name>bintray</name>
-      <url>https://dl.bintray.com/red-soft-ru/releases</url>
+      <id>red-soft-nexus-jaybird-releases</id>
+      <url>http://nexus.red-soft.biz/repository/jaybird-releases</url>
     </repository>
   </repositories>
 
@@ -38,17 +34,17 @@
     <dependency>
       <groupId>ru.red-soft.jdbc</groupId>
       <artifactId>jaybird-jdk18</artifactId>
-      <version>4.0.4</version>
+      <version>4.0.6</version>
     </dependency>
     <dependency>
       <groupId>ru.red-soft.jdbc</groupId>
       <artifactId>jaybird-cryptoapi-jdk18</artifactId>
-      <version>4.0.4</version>
+      <version>4.0.6</version>
     </dependency>
     <dependency>
       <groupId>ru.red-soft.jdbc</groupId>
       <artifactId>fbclient</artifactId>
-      <version>4.0.4</version>
+      <version>4.0.6</version>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
@@ -96,7 +92,7 @@
                 <artifactItem>
                   <groupId>ru.red-soft.jdbc</groupId>
                   <artifactId>jaybird-jdk18</artifactId>
-                  <version>3.0.17</version>
+                  <version>3.0.20</version>
                   <type>jar</type>
                   <outputDirectory>../../../lib</outputDirectory>
                   <destFileName>jaybird-3.jar</destFileName>
@@ -111,7 +107,7 @@
                 <artifactItem>
                   <groupId>ru.red-soft.jdbc</groupId>
                   <artifactId>jaybird-cryptoapi-jdk18</artifactId>
-                  <version>3.0.17</version>
+                  <version>3.0.20</version>
                   <type>jar</type>
                   <outputDirectory>../../../lib</outputDirectory>
                   <destFileName>jaybird-cryptoapi-3.jar</destFileName>
@@ -143,7 +139,7 @@
                 <artifactItem>
                   <groupId>ru.red-soft.jdbc</groupId>
                   <artifactId>jaybird-jdk18</artifactId>
-                  <version>3.0.17</version>
+                  <version>3.0.20</version>
                   <type>jar</type>
                   <outputDirectory>../../redexpert/target/lib</outputDirectory>
                   <destFileName>jaybird-3.jar</destFileName>
@@ -158,7 +154,7 @@
                 <artifactItem>
                   <groupId>ru.red-soft.jdbc</groupId>
                   <artifactId>jaybird-cryptoapi-jdk18</artifactId>
-                  <version>3.0.17</version>
+                  <version>3.0.20</version>
                   <type>jar</type>
                   <outputDirectory>../../redexpert/target/lib</outputDirectory>
                   <destFileName>jaybird-cryptoapi-3.jar</destFileName>
