--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -38,57 +38,21 @@
         </dependency>
 
         <dependency>
-            <groupId>batik</groupId>
-            <artifactId>batik</artifactId>
-            <version>1.5</version>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>batik-all</artifactId>
+            <version>1.14</version>
         </dependency>
 
         <dependency>
-            <groupId>batik</groupId>
-            <artifactId>batik-awt-util</artifactId>
-            <version>1.6-1</version>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>batik-swing</artifactId>
+            <version>1.14</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>batik-codec</artifactId>
-            <version>1.8</version>
-        </dependency>
-
-        <dependency>
-            <groupId>batik</groupId>
-            <artifactId>batik-dom</artifactId>
-            <version>1.6-1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>batik</groupId>
-            <artifactId>batik-ext</artifactId>
-            <version>1.6-1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>batik</groupId>
-            <artifactId>batik-rasterizer-ext</artifactId>
-            <version>1.6-1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>batik</groupId>
-            <artifactId>batik-svggen</artifactId>
-            <version>1.6-1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>batik</groupId>
-            <artifactId>batik-util</artifactId>
-            <version>1.6-1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>batik</groupId>
-            <artifactId>batik-xml</artifactId>
-            <version>1.6-1</version>
+            <version>1.14</version>
         </dependency>
 
         <dependency>
